kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: events
  template:
    metadata:
      labels:
        app: events
    spec:
      containers:
        - image: ribvid/rso-events:1.0.7
          name: events
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /live
              port: 9000
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /ready
              port: 9000
            initialDelaySeconds: 5
            failureThreshold: 2
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: events
spec:
#  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: events

---
apiVersion: v1
kind: Service
metadata:
  name: events-health
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9000
  selector:
    app: events
